@@ -935,6 +935,9 @@ frozenset_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
 {
 	PyObject *iterable = NULL, *result;
 
+	if (!_PyArg_NoKeywords("frozenset()", kwds))
+		return NULL;
+
 	if (!PyArg_UnpackTuple(args, type->tp_name, 0, 1, &iterable))
 		return NULL;
 
@@ -976,6 +979,9 @@ PySet_Fini(void)
 static PyObject *
 set_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
 {
+	if (!_PyArg_NoKeywords("set()", kwds))
+		return NULL;
+	
 	return make_new_set(type, NULL);
 }
 
